--- a/naga-cli/Cargo.toml
+++ b/naga-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "naga-cli"
-version = "0.19.0"
+version = "0.20.0-alpha.0"
 authors = ["gfx-rs developers"]
 edition = "2021"
 description = "Shader translation command line tool"
@@ -25,7 +25,7 @@ env_logger = "0.11"
 argh = "0.1.5"
 
 [dependencies.naga]
-version = "0.19"
+version = "0.20.0-alpha.0"
 path = "../naga"
 features = [
     "compact",
