--- a/wgpu-hal/Cargo.toml
+++ b/wgpu-hal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wgpu-hal"
-version = "0.19.0"
+version = "0.20.0-alpha.0"
 authors = ["gfx-rs developers"]
 edition = "2021"
 description = "WebGPU hardware abstraction layer"
@@ -110,7 +110,7 @@ glow = { version = "0.13.1", optional = true }
 [dependencies.wgt]
 package = "wgpu-types"
 path = "../wgpu-types"
-version = "0.19.0"
+version = "0.20.0-alpha.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 # backend: Vulkan
@@ -147,7 +147,7 @@ winapi = { version = "0.3", features = [
     "winuser",
     "dcomp",
 ] }
-d3d12 = { path = "../d3d12/", version = "0.19.0", optional = true, features = [
+d3d12 = { path = "../d3d12/", version = "0.20.0-alpha.0", optional = true, features = [
     "libloading",
 ] }
 
@@ -178,7 +178,7 @@ ndk-sys = { version = "0.5.0", optional = true }
 
 [dependencies.naga]
 path = "../naga"
-version = "0.19.0"
+version = "0.20.0-alpha.0"
 features = ["clone"]
 
 [build-dependencies]
@@ -187,7 +187,7 @@ cfg_aliases.workspace = true
 # DEV dependencies
 [dev-dependencies.naga]
 path = "../naga"
-version = "0.19.0"
+version = "0.20.0-alpha.0"
 features = ["wgsl-in"]
 
 [dev-dependencies]
