--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 members = [
     "cts_runner",
     "deno_webgpu",
+    "benches",
 
     # default members
     "d3d12",
@@ -22,6 +23,7 @@ members = [
 ]
 exclude = []
 default-members = [
+    "benches",
     "d3d12",
     "examples/",
     "naga-cli",
@@ -72,9 +74,13 @@ anyhow = "1.0"
 arrayvec = "0.7"
 bit-vec = "0.6"
 bitflags = "2"
+bincode = "1"
 bytemuck = { version = "1.14", features = ["derive"] }
 cfg_aliases = "0.1"
 cfg-if = "1"
+criterion = "0.5"
+rayon = "1"
+tracy-client = "0.17"
 codespan-reporting = "0.11"
 ctor = "0.2"
 document-features = "0.2.8"
